--- a/06-08/files/sass/my.scss
+++ b/06-08/files/sass/my.scss
@@ -4,8 +4,12 @@
 
 .left{
   background-color: grey;
+  -webkit-clip-path: polygon(0 0, 65% 0, 29% 100%, 0% 100%);
+  clip-path: polygon(0 0, 65% 0, 29% 100%, 0% 100%);
 }
 
 .right {
   background: linear-gradient(to right, yellow, red);
+  -webkit-clip-path: polygon(70% 0, 100% 0, 100% 100%, 34% 100%);
+clip-path: polygon(70% 0, 100% 0, 100% 100%, 34% 100%);
 }
