--- a/06-08/files/sass/my.scss
+++ b/06-08/files/sass/my.scss
@@ -3,13 +3,18 @@
 }
 
 .left{
+  background-size: cover;
   background-color: grey;
-  -webkit-clip-path: polygon(0 0, 65% 0, 29% 100%, 0% 100%);
-  clip-path: polygon(0 0, 65% 0, 29% 100%, 0% 100%);
+  // -webkit-clip-path: polygon(0 0, 65% 0, 30% 100%, 0% 100%);
+  // clip-path: polygon(0 0, 65% 0, 30% 100%, 0% 100%);
 }
 
 .right {
   background: linear-gradient(to right, yellow, red);
-  -webkit-clip-path: polygon(70% 0, 100% 0, 100% 100%, 34% 100%);
-clip-path: polygon(70% 0, 100% 0, 100% 100%, 34% 100%);
+//   -webkit-clip-path: polygon(70% 0, 100% 0, 100% 100%, 35% 100%);
+// clip-path: polygon(70% 0, 100% 0, 100% 100%, 35% 100%);
+}
+
+p{
+  width: 90%;
 }
