--- a/06-08/views/index.handlebars
+++ b/06-08/views/index.handlebars
@@ -1,20 +1,20 @@
-<div class="left">
+<!-- <div class="left"></div> -->
+<section class="izq">
 <!-- título -->
 <h1>Lado izquierdo</h1>
-
-<!-- imagen oculta -->
-<img src="/img/hp1.jpg" alt="hp" id="i1" class="invisible">
 
 <!-- botón que hace aparecer la imagen -->
 <button id="b1" type="button" name="button">Abra cadabra</button>
 
+<!-- imagen oculta -->
+<img src="/img/hp1.jpg" alt="hp" id="i1" class="invisible">
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
+</section>
 
 
-
-<div class="right">
+<!-- <div class="right"></div> -->
+<section class="der">
 
 <!-- imagen oculta -->
 <img src="/img/hp2.jpeg" alt="hp" id="i2" class="invisible">
@@ -25,4 +25,5 @@
 
 <!-- botón que hace aparecer la imagen -->
 <button id="b2" type="button" name="button">Expeliarmus</button>
-</div>
+
+</section>
