--- a/06-08/views/index.handlebars
+++ b/06-08/views/index.handlebars
@@ -1,29 +1,32 @@
-<!-- <div class="left"></div> -->
 <section class="izq">
-<!-- título -->
-<h1>Lado izquierdo</h1>
+  <div class="ml">
 
-<!-- botón que hace aparecer la imagen -->
-<button id="b1" type="button" name="button">Abra cadabra</button>
+    <!-- título -->
+    <h1>Lado izquierdo</h1>
 
-<!-- imagen oculta -->
-<img src="/img/hp1.jpg" alt="hp" id="i1" class="invisible">
+    <!-- botón que hace aparecer la imagen -->
+    <button id="b1" type="button" name="button">Abra cadabra</button>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <!-- imagen oculta -->
+    <img src="/img/hp1.jpg" alt="hp" id="i1" class="invisible">
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
 </section>
 
-
-<!-- <div class="right"></div> -->
 <section class="der">
+  <br><br>
+  <div align="right" class="mr">
+    <!-- imagen oculta -->
+    <img src="/img/hp2.jpeg" alt="hp" id="i2" class="invisible">
 
-<!-- imagen oculta -->
-<img src="/img/hp2.jpeg" alt="hp" id="i2" class="invisible">
+    <h1>Lado derecho</h1>
 
-<h1>Lado derecho</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<!-- botón que hace aparecer la imagen -->
-<button id="b2" type="button" name="button">Expeliarmus</button>
-
+    <!-- botón que hace aparecer la imagen -->
+    <button id="b2" type="button" name="button">Expeliarmus</button>
+  </div>
 </section>
