--- a/06-08/files/sass/my.scss
+++ b/06-08/files/sass/my.scss
@@ -10,10 +10,14 @@
   background-color: lightgrey;
   clip-path: polygon(0 0, 65% 0, 30% 100%, 0% 100%);
   height: 800px;
-
-
 }
 
+.mr{
+  margin-right: 15px;
+}
+.ml{
+  margin-left: 15px;
+}
 
 .der {
   z-index: 100;
@@ -21,8 +25,8 @@
   position: absolute;
   background: linear-gradient(to top, yellow, red);
   clip-path: polygon(66% 0, 100% 0, 100% 100%, 31% 100%);
-  background-size: cover;
-  display: inline-flex;
+  // background-size: cover;
+  // display: inline-flex;
   height: 800px;
 }
 
