--- a/06-08/views/index.handlebars
+++ b/06-08/views/index.handlebars
@@ -1,4 +1,6 @@
+<!-- section lleva toda la parte del fondo con la clase .izq  -->
 <section class="izq">
+  <!-- div.ml es la caja que muevo dentro de la section para alojar los otros elementos -->
   <div class="ml">
 
     <!-- título -->
@@ -10,19 +12,27 @@
     <!-- imagen oculta -->
     <img src="/img/hp1.jpg" alt="hp" id="i1" class="invisible">
 
+    <!-- texto plano -->
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
       dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 </section>
 
+<!-- section lleva toda la parte del fondo con la clase .der  -->
 <section class="der">
+
   <br><br>
+
+  <!-- div.mr es la caja que muevo dentro de la section para alojar los otros elementos -->
   <div align="right" class="mr">
+
     <!-- imagen oculta -->
     <img src="/img/hp2.jpeg" alt="hp" id="i2" class="invisible">
 
+    <!-- Título -->
     <h1>Lado derecho</h1>
 
+    <!-- texto plano -->
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
       dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
