--- a/06-08/views/layouts/main.handlebars
+++ b/06-08/views/layouts/main.handlebars
@@ -10,19 +10,14 @@
 </head>
 
 <body>
-  <!-- carga la cabecera -->
-  {{>header}}
-
+  
   <!-- carga el contenido de la página -->
   {{{body}}}
-
-  <!-- carga el pie de página -->
-  {{>footer}}
 
   <!-- Carga Jquery via cdn -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
-  <!-- Carga la función personal -->
+  <!-- Carga la función de los botones -->
   <script src="/js/click.js"></script>
 </body>
 
